# gencsvrs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_er.txt  test_er2.txt
.claude/plans/: db-target-types-d1.plan.md  er-diagram-generator-m1.plan.md
.claude/prds/: db-target-types.prd.md  er-diagram-generator.prd.md
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: DIALECTS.md  ERD.md  USAGE.md
src/: csv.rs  fake.rs  lib.rs  main.rs  output.rs
src/output_types/: csv.rs  mod.rs
src/output_types/lib/: arrow_util.rs  column_context.rs  fake.rs  mod.rs  output.rs  schema.rs
src/util/: dataframe.rs  ddl.rs  dialect.rs  er.rs  erd_ast.rs  fake.rs  generator.rs  load_cmd.rs  mod.rs  multi_file_sink.rs  output.rs  parser.rs  scanner.rs  schema.rs
tests/: cli.rs
tests/expected/: csv-default-output.txt  csv-default-r20-pipe-output.txt  csv-default-r3-output.txt
tests/fixtures/dialects/: users.ddl.postgres.sql
tests/fixtures/er/: car_person.mmd  invalid_glyph.mmd  student_course_mn.mmd
