[package]
name = "gencsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
fake = { version = "2.6.1", features = ["chrono", "uuid"] }
uuid = "1.3.3"
arrow = "49.0.0"
parquet = "49.0.0"
csv = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
