[package]
name = "gencsv"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
fake = { version = "2.9.2", features = ["chrono", "uuid"] }
fakeit = "1.2.0"
uuid = "1.3.3"
polars = { version = "0.38.3", features = ["lazy","parquet","csv",] }
regex = "1.7"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
