[package]
name = "synthtab"
version = "0.2.0"
edition = "2021"
description = "Generate realistic fake tabular data with matching DDL and load scripts; ER-mode produces FK-consistent relational datasets from Mermaid erDiagrams."
license = "MIT"
repository = "https://github.com/jheryer/synthtab"
homepage = "https://github.com/jheryer/synthtab"
readme = "README.md"
keywords = ["csv", "parquet", "fake-data", "fixtures", "test-data"]
categories = ["command-line-utilities", "development-tools::testing"]
authors = ["John Heryer"]
exclude = ["out/", "target/", "tests/expected/", ".claude/", "docs/", "Cargo.lock"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
fake = { version = "2.9.2", features = ["chrono", "uuid"] }
fakeit = "1.2.0"
uuid = "1.3.3"
polars = { version = "0.38.3", features = ["lazy","parquet","csv",] }
regex = "1.7"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
